--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.3.3",
+    "remixicon": "^4.6.0",
     "rxjs": "~7.8.0",
+    "swiper": "^11.2.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
@@ -26,6 +30,7 @@
     "@angular-devkit/build-angular": "^18.1.4",
     "@angular/cli": "^18.1.4",
     "@angular/compiler-cli": "^18.1.0",
+    "@types/google.maps": "^3.58.1",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
