--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,13 @@
     "lib": [
       "ES2022",
       "dom"
+    ],
+    "typeRoots": [
+      "node_modules/@types",
+      "src/types.d.ts"
+    ],
+    "types": [
+      "google.maps"
     ]
   },
   "angularCompilerOptions": {
